Fixed typo in syllabus

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -14,7 +14,7 @@
 
 \pagestyle{fancyplain}
 \fancyhf{}
-\lhead{ \fancyplain{}{Course Name} }
+\lhead{ \fancyplain{}{CSC2621} }
 %\chead{ \fancyplain{}{} }
 \rhead{ \fancyplain{}{\today} }
 %\rfoot{\fancyplain{}{page \thepage\ of \pageref{LastPage}}}
